feat: Improved WhatsApp contact extraction - Fixed number extraction logic, removed duplicate processing, optimized extraction speed (200ms delay), added proper lifecycle management for service enable/disable

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,7 +104,13 @@
             android:exported="false" />
         <activity
             android:name=".tutorial.FaqActivity"
-            android:exported="false" /> <!-- Accessibility Service -->
+            android:exported="false" />
+        <activity
+            android:name=".waextract.TextExtractActivity"
+            android:exported="true"
+            android:label="WhatsApp Contact Extractor" />
+            
+        <!-- Unified Accessibility Service (Auto Send + Contact Extraction) -->
         <service
             android:name=".bulksend.WhatsAppAutoSendService"
             android:exported="false"
